Fixed issues with feed and post headers going off the screen on small displays

--- a/gdRead.Web/Content/Site.css
+++ b/gdRead.Web/Content/Site.css
@@ -138,7 +138,7 @@ input[type="checkbox"].input-validation-error {
 
 .PostContainer {
     background-color: #EBEFF9;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .TableRow {
@@ -247,7 +247,4 @@ a:hover {
 
 #feedContainer {
     margin-top: 20px;
-}
-.TableRow {
-    width: 945px;
 }
